--- a/e-collective-front-end/package.json
+++ b/e-collective-front-end/package.json
@@ -26,7 +26,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angularfire2": "^5.4.2",
     "animate.css": "^4.1.1",
+    "firebase": "^7.24.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
