--- a/e-collective-front-end/package.json
+++ b/e-collective-front-end/package.json
@@ -31,8 +31,9 @@
     "angularfire2": "^5.4.2",
     "animate.css": "^4.1.1",
     "firebase": "^7.24.0",
+    "ngx-owl-carousel-o": "^4.0.0",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
