--- a/e-collective-front-end/package.json
+++ b/e-collective-front-end/package.json
@@ -29,6 +29,7 @@
     "angularfire2": "^5.4.2",
     "animate.css": "^4.1.1",
     "firebase": "^7.24.0",
+    "moment": "^2.19.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
