--- a/e-collective-front-end/package.json
+++ b/e-collective-front-end/package.json
@@ -32,6 +32,7 @@
     "animate.css": "^4.1.1",
     "firebase": "^7.24.0",
     "lodash": "^4.17.20",
+    "moment": "^2.19.3",
     "ngx-owl-carousel-o": "^4.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.3",
