--- a/e-collective-front-end/package.json
+++ b/e-collective-front-end/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prod": "ng build --prod --base-href=\"./\""
+    "prod": "ng build --prod --base-href=\"./\"",
+    "start:server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -30,11 +31,15 @@
     "@ionic/angular": "^5.0.0",
     "angularfire2": "^5.4.2",
     "animate.css": "^4.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^7.24.0",
+    "http": "0.0.1-security",
     "lodash": "^4.17.20",
     "moment": "^2.19.3",
     "ngx-owl-carousel-o": "^4.0.0",
     "rxjs": "~6.5.5",
+    "soap": "^0.36.0",
     "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
@@ -58,6 +63,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "nodemon": "^2.0.7",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
